# stag-hunt

./: .gitignore  README.md  pyproject.toml  sweep_all.sh  sweep_med.sh  sweep_small.sh
output/all_combination/: fig11_b3_matched_table.txt  fig12_h1_vs_h2_table.txt  fig13_h1_vs_h3_table.txt  fig17_rule_comparison.txt  fig3_calibration.txt  figure_story_doc.md
output/all_combination/pdf/: fig16_naive_alignment_table.txt  fig17_rule_comparison.txt  fig5_payoffs.txt
output/sweep_med/: fig11_b3_matched_table.txt  fig12_h1_vs_h2_table.txt  fig13_h1_vs_h3_table.txt  fig3_calibration.txt  fig5_payoffs.txt  improvements.md
output/sweep_small/: captions.md
scripts/: combine_log_dirs.py  hf_logs.py
src/stag_hunt/: analysis.py  beliefs.py  results.py  sim.py  sweep_sim.py
src/stag_hunt/prompts/: justify_lie.jinja
tests/: test_analysis_beliefs.py
